# ClassicSim

./: CMakeLists.txt  CommandLineControl.cpp  CommandLineControl.h  main2.cpp
DevTools/: xml_to_enum.py
GUI/: ClassicSimControl.cpp  ClassicSimControl.h  GUIControl.cpp  GUIControl.h  Items.h
QML/: main.qml
Rotation/Rotations/: rotation_paths.xml
Rotation/Rotations/Warrior/: ProtNoDW.xml
