cmake_minimum_required(VERSION 3.15)

project(ClassicSim LANGUAGES CXX)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_PREFIX_PATH $ENV{HOME}/Qt/5.14.1/clang_64)

find_package(Qt5 COMPONENTS Core Quick Charts REQUIRED)

add_definitions(-DQT_DEPRECATED_WARNINGS)

macro(HEADER_DIRECTORIES return_list)
  file(GLOB_RECURSE new_list *.h)
  set(dir_list "")
  foreach(file_path ${new_list})
    get_filename_component(dir_path ${file_path} PATH)
    set(dir_list ${dir_list} ${dir_path})
  endforeach()
  list(REMOVE_DUPLICATES dir_list)
  set(${return_list} ${dir_list})
endmacro()

header_directories(list)
include_directories(${list})

add_library(
  ClassicLib STATIC
Character/Character.cpp
Character/Character.h
Character/CharacterDecoder.cpp
Character/CharacterDecoder.h
Character/CharacterEnchants.cpp
Character/CharacterEnchants.h
Character/CharacterEncoder.cpp
Character/CharacterEncoder.h
Character/CharacterEncoding.h
Character/CharacterLoader.cpp
Character/CharacterLoader.h
Character/CharacterSpells.cpp
Character/CharacterSpells.h
Character/CharacterStats.cpp
Character/CharacterStats.h
Character/EnabledBuffs.cpp
Character/EnabledBuffs.h
Character/EnabledProcs.cpp
Character/EnabledProcs.h
Character/Race/Race.cpp
Character/Race/Race.h
Character/Race/Races/Dwarf.cpp
Character/Race/Races/Dwarf.h
Character/Race/Races/Gnome.cpp
Character/Race/Races/Gnome.h
Character/Race/Races/Human.cpp
Character/Race/Races/Human.h
Character/Race/Races/NightElf.cpp
Character/Race/Races/NightElf.h
Character/Race/Races/Orc.cpp
Character/Race/Races/Orc.h
Character/Race/Races/Tauren.cpp
Character/Race/Races/Tauren.h
Character/Race/Races/Troll.cpp
Character/Race/Races/Troll.h
Character/Race/Races/Undead.cpp
Character/Race/Races/Undead.h
Character/Race/Racials/Berserking.cpp
Character/Race/Racials/Berserking.h
Character/Race/Racials/BerserkingBuff.cpp
Character/Race/Racials/BerserkingBuff.h
Character/Race/Racials/BloodFury.cpp
Character/Race/Racials/BloodFury.h
Character/Race/Racials/BloodFuryBuff.cpp
Character/Race/Racials/BloodFuryBuff.h
Character/Stats.cpp
Character/Stats.h
Class/Common/AttackMode.h
Class/Common/Buffs/ArmorPenetrationBuff.cpp
Class/Common/Buffs/ArmorPenetrationBuff.h
Class/Common/Buffs/DevilsaurEye.cpp
Class/Common/Buffs/DevilsaurEye.h
Class/Common/Buffs/ExtraAttackOnNextSwingBuff.cpp
Class/Common/Buffs/ExtraAttackOnNextSwingBuff.h
Class/Common/Buffs/FelstrikerBuff.cpp
Class/Common/Buffs/FelstrikerBuff.h
Class/Common/Buffs/FlatWeaponDamageBuff.cpp
Class/Common/Buffs/FlatWeaponDamageBuff.h
Class/Common/Buffs/GenericStatBuff.cpp
Class/Common/Buffs/GenericStatBuff.h
Class/Common/Buffs/HolyStrength.cpp
Class/Common/Buffs/HolyStrength.h
Class/Common/Buffs/JomGabbar.cpp
Class/Common/Buffs/JomGabbar.h
Class/Common/Buffs/Nightfall.cpp
Class/Common/Buffs/Nightfall.h
Class/Common/Buffs/NoEffectSelfBuff.cpp
Class/Common/Buffs/NoEffectSelfBuff.h
Class/Common/Buffs/NoEffectUniqueDebuff.cpp
Class/Common/Buffs/NoEffectUniqueDebuff.h
Class/Common/Buffs/SanctifiedOrb.cpp
Class/Common/Buffs/SanctifiedOrb.h
Class/Common/Buffs/SuppressCastBuff.cpp
Class/Common/Buffs/SuppressCastBuff.h
Class/Common/Buffs/ZandalarianHeroCharm.cpp
Class/Common/Buffs/ZandalarianHeroCharm.h
Class/Common/Enchants/Crusader.cpp
Class/Common/Enchants/Crusader.h
Class/Common/Enchants/Enchant.cpp
Class/Common/Enchants/Enchant.h
Class/Common/Enchants/EnchantName.h
Class/Common/Enchants/EnchantProc.cpp
Class/Common/Enchants/EnchantProc.h
Class/Common/Enchants/EnchantStatic.cpp
Class/Common/Enchants/EnchantStatic.h
Class/Common/Enchants/FieryWeapon.cpp
Class/Common/Enchants/FieryWeapon.h
Class/Common/Enchants/WindfuryTotemAttack.cpp
Class/Common/Enchants/WindfuryTotemAttack.h
Class/Common/GeneralBuffs.cpp
Class/Common/GeneralBuffs.h
Class/Common/GeneralProcs.cpp
Class/Common/GeneralProcs.h
Class/Common/Pet/Pet.cpp
Class/Common/Pet/Pet.h
Class/Common/Pet/Species/Cat.cpp
Class/Common/Pet/Species/Cat.h
Class/Common/Pet/Spells/Claw.cpp
Class/Common/Pet/Spells/Claw.h
Class/Common/Pet/Spells/PetAutoAttack.cpp
Class/Common/Pet/Spells/PetAutoAttack.h
Class/Common/Procs/ArmorPenetrationProc.cpp
Class/Common/Procs/ArmorPenetrationProc.h
Class/Common/Procs/ExtraAttackInstantProc.cpp
Class/Common/Procs/ExtraAttackInstantProc.h
Class/Common/Procs/ExtraAttackOnNextSwingProc.cpp
Class/Common/Procs/ExtraAttackOnNextSwingProc.h
Class/Common/Procs/FelstrikerProc.cpp
Class/Common/Procs/FelstrikerProc.h
Class/Common/Procs/GenericBuffProc.cpp
Class/Common/Procs/GenericBuffProc.h
Class/Common/Procs/GenericChargeConsumerProc.cpp
Class/Common/Procs/GenericChargeConsumerProc.h
Class/Common/Procs/GenericSpellProc.cpp
Class/Common/Procs/GenericSpellProc.h
Class/Common/Procs/InstantSpellProc.cpp
Class/Common/Procs/InstantSpellProc.h
Class/Common/Procs/ResourceGainProc.cpp
Class/Common/Procs/ResourceGainProc.h
Class/Common/Spells/DemonicRune.cpp
Class/Common/Spells/DemonicRune.h
Class/Common/Spells/DragonbreathChili.cpp
Class/Common/Spells/DragonbreathChili.h
Class/Common/Spells/EssenceOfTheRed.cpp
Class/Common/Spells/EssenceOfTheRed.h
Class/Common/Spells/FireballInstant.cpp
Class/Common/Spells/FireballInstant.h
Class/Common/Spells/InstantSpellAttack.cpp
Class/Common/Spells/InstantSpellAttack.h
Class/Common/Spells/MainhandAttack.cpp
Class/Common/Spells/MainhandAttack.h
Class/Common/Spells/ManaPotion.cpp
Class/Common/Spells/ManaPotion.h
Class/Common/Spells/NightDragonsBreath.cpp
Class/Common/Spells/NightDragonsBreath.h
Class/Common/Spells/OffhandAttack.cpp
Class/Common/Spells/OffhandAttack.h
Class/Common/Spells/PeriodicDamageSpell.cpp
Class/Common/Spells/PeriodicDamageSpell.h
Class/Common/Spells/PeriodicResourceGainSpell.cpp
Class/Common/Spells/PeriodicResourceGainSpell.h
Class/Common/Spells/ResourceTick.cpp
Class/Common/Spells/ResourceTick.h
Class/Common/Spells/UseItem.cpp
Class/Common/Spells/UseItem.h
Class/Common/Spells/UseTrinket.cpp
Class/Common/Spells/UseTrinket.h
Class/Druid/Buffs/BearFormBuff.cpp
Class/Druid/Buffs/BearFormBuff.h
Class/Druid/Buffs/CatFormBuff.cpp
Class/Druid/Buffs/CatFormBuff.h
Class/Druid/Buffs/LeaderOfThePack.cpp
Class/Druid/Buffs/LeaderOfThePack.h
Class/Druid/Buffs/MoonkinFormBuff.cpp
Class/Druid/Buffs/MoonkinFormBuff.h
Class/Druid/Buffs/NaturesGrace.cpp
Class/Druid/Buffs/NaturesGrace.h
Class/Druid/Buffs/TigersFuryBuff.cpp
Class/Druid/Buffs/TigersFuryBuff.h
Class/Druid/Druid.cpp
Class/Druid/Druid.h
Class/Druid/DruidEnchants.cpp
Class/Druid/DruidEnchants.h
Class/Druid/DruidSpells.cpp
Class/Druid/DruidSpells.h
Class/Druid/Procs/BloodFrenzy.cpp
Class/Druid/Procs/BloodFrenzy.h
Class/Druid/Procs/ClearcastingDruid.cpp
Class/Druid/Procs/ClearcastingDruid.h
Class/Druid/Procs/Furor.cpp
Class/Druid/Procs/Furor.h
Class/Druid/Procs/PrimalFury.cpp
Class/Druid/Procs/PrimalFury.h
Class/Druid/Spells/BearForm.cpp
Class/Druid/Spells/BearForm.h
Class/Druid/Spells/CasterForm.cpp
Class/Druid/Spells/CasterForm.h
Class/Druid/Spells/CatForm.cpp
Class/Druid/Spells/CatForm.h
Class/Druid/Spells/Enrage.cpp
Class/Druid/Spells/Enrage.h
Class/Druid/Spells/FerociousBite.cpp
Class/Druid/Spells/FerociousBite.h
Class/Druid/Spells/MainhandAttackDruid.cpp
Class/Druid/Spells/MainhandAttackDruid.h
Class/Druid/Spells/Maul.cpp
Class/Druid/Spells/Maul.h
Class/Druid/Spells/Moonfire.cpp
Class/Druid/Spells/Moonfire.h
Class/Druid/Spells/MoonkinForm.cpp
Class/Druid/Spells/MoonkinForm.h
Class/Druid/Spells/Shred.cpp
Class/Druid/Spells/Shred.h
Class/Druid/Spells/Starfire.cpp
Class/Druid/Spells/Starfire.h
Class/Druid/Spells/Swipe.cpp
Class/Druid/Spells/Swipe.h
Class/Druid/Spells/TigersFury.cpp
Class/Druid/Spells/TigersFury.h
Class/Druid/Spells/Wrath.cpp
Class/Druid/Spells/Wrath.h
Class/Druid/TalentTrees/Balance.cpp
Class/Druid/TalentTrees/Balance.h
Class/Druid/TalentTrees/FeralCombat.cpp
Class/Druid/TalentTrees/FeralCombat.h
Class/Druid/TalentTrees/RestorationDruid.cpp
Class/Druid/TalentTrees/RestorationDruid.h
Class/Hunter/Buffs/AspectOfTheHawkBuff.cpp
Class/Hunter/Buffs/AspectOfTheHawkBuff.h
Class/Hunter/Buffs/BestialWrathBuff.cpp
Class/Hunter/Buffs/BestialWrathBuff.h
Class/Hunter/Buffs/ExposeWeaknessBuff.cpp
Class/Hunter/Buffs/ExposeWeaknessBuff.h
Class/Hunter/Buffs/FrenzyBuff.cpp
Class/Hunter/Buffs/FrenzyBuff.h
Class/Hunter/Buffs/HuntersMarkBuff.cpp
Class/Hunter/Buffs/HuntersMarkBuff.h
Class/Hunter/Buffs/ImprovedAspectOfTheHawkBuff.cpp
Class/Hunter/Buffs/ImprovedAspectOfTheHawkBuff.h
Class/Hunter/Buffs/RapidFireBuff.cpp
Class/Hunter/Buffs/RapidFireBuff.h
Class/Hunter/Hunter.cpp
Class/Hunter/Hunter.h
Class/Hunter/HunterEnchants.cpp
Class/Hunter/HunterEnchants.h
Class/Hunter/HunterPet.cpp
Class/Hunter/HunterPet.h
Class/Hunter/HunterSpells.cpp
Class/Hunter/HunterSpells.h
Class/Hunter/Procs/ExposeWeaknessProc.cpp
Class/Hunter/Procs/ExposeWeaknessProc.h
Class/Hunter/Procs/FrenzyProc.cpp
Class/Hunter/Procs/FrenzyProc.h
Class/Hunter/Procs/ImprovedAspectOfTheHawkProc.cpp
Class/Hunter/Procs/ImprovedAspectOfTheHawkProc.h
Class/Hunter/Spells/AimedShot.cpp
Class/Hunter/Spells/AimedShot.h
Class/Hunter/Spells/AspectOfTheHawk.cpp
Class/Hunter/Spells/AspectOfTheHawk.h
Class/Hunter/Spells/AutoShot.cpp
Class/Hunter/Spells/AutoShot.h
Class/Hunter/Spells/BestialWrath.cpp
Class/Hunter/Spells/BestialWrath.h
Class/Hunter/Spells/HuntersMark.cpp
Class/Hunter/Spells/HuntersMark.h
Class/Hunter/Spells/MultiShot.cpp
Class/Hunter/Spells/MultiShot.h
Class/Hunter/Spells/RapidFire.cpp
Class/Hunter/Spells/RapidFire.h
Class/Hunter/TalentTrees/BeastMastery.cpp
Class/Hunter/TalentTrees/BeastMastery.h
Class/Hunter/TalentTrees/Marksmanship.cpp
Class/Hunter/TalentTrees/Marksmanship.h
Class/Hunter/TalentTrees/Survival.cpp
Class/Hunter/TalentTrees/Survival.h
Class/Mage/Buffs/ArcanePowerBuff.cpp
Class/Mage/Buffs/ArcanePowerBuff.h
Class/Mage/Buffs/CombustionBuff.cpp
Class/Mage/Buffs/CombustionBuff.h
Class/Mage/Buffs/ElementalVulnerability.cpp
Class/Mage/Buffs/ElementalVulnerability.h
Class/Mage/Buffs/EvocationBuff.cpp
Class/Mage/Buffs/EvocationBuff.h
Class/Mage/Buffs/FireVulnerability.cpp
Class/Mage/Buffs/FireVulnerability.h
Class/Mage/Buffs/IgniteBuff.cpp
Class/Mage/Buffs/IgniteBuff.h
Class/Mage/Buffs/MageArmorBuff.cpp
Class/Mage/Buffs/MageArmorBuff.h
Class/Mage/Buffs/WintersChill.cpp
Class/Mage/Buffs/WintersChill.h
Class/Mage/Mage.cpp
Class/Mage/Mage.h
Class/Mage/MageEnchants.cpp
Class/Mage/MageEnchants.h
Class/Mage/MageSpells.cpp
Class/Mage/MageSpells.h
Class/Mage/Procs/ClearcastingMage.cpp
Class/Mage/Procs/ClearcastingMage.h
Class/Mage/Procs/ImprovedScorch.cpp
Class/Mage/Procs/ImprovedScorch.h
Class/Mage/Procs/WintersChillProc.cpp
Class/Mage/Procs/WintersChillProc.h
Class/Mage/Spells/ArcaneMissiles.cpp
Class/Mage/Spells/ArcaneMissiles.h
Class/Mage/Spells/ArcanePower.cpp
Class/Mage/Spells/ArcanePower.h
Class/Mage/Spells/Combustion.cpp
Class/Mage/Spells/Combustion.h
Class/Mage/Spells/Evocation.cpp
Class/Mage/Spells/Evocation.h
Class/Mage/Spells/Fireball.cpp
Class/Mage/Spells/Fireball.h
Class/Mage/Spells/Frostbolt.cpp
Class/Mage/Spells/Frostbolt.h
Class/Mage/Spells/Ignite.cpp
Class/Mage/Spells/Ignite.h
Class/Mage/Spells/MageArmor.cpp
Class/Mage/Spells/MageArmor.h
Class/Mage/Spells/RobeOfTheArchmage.cpp
Class/Mage/Spells/RobeOfTheArchmage.h
Class/Mage/Spells/Scorch.cpp
Class/Mage/Spells/Scorch.h
Class/Mage/TalentTrees/Arcane.cpp
Class/Mage/TalentTrees/Arcane.h
Class/Mage/TalentTrees/Fire.cpp
Class/Mage/TalentTrees/Fire.h
Class/Mage/TalentTrees/Frost.cpp
Class/Mage/TalentTrees/Frost.h
Class/Paladin/Buffs/JudgementOfTheCrusader.cpp
Class/Paladin/Buffs/JudgementOfTheCrusader.h
Class/Paladin/Buffs/SanctityAuraBuff.cpp
Class/Paladin/Buffs/SanctityAuraBuff.h
Class/Paladin/Buffs/SealOfTheCrusaderBuff.cpp
Class/Paladin/Buffs/SealOfTheCrusaderBuff.h
Class/Paladin/Buffs/Vengeance.cpp
Class/Paladin/Buffs/Vengeance.h
Class/Paladin/Paladin.cpp
Class/Paladin/Paladin.h
Class/Paladin/PaladinEnchants.cpp
Class/Paladin/PaladinEnchants.h
Class/Paladin/PaladinSpells.cpp
Class/Paladin/PaladinSpells.h
Class/Paladin/Procs/SealOfCommandProc.cpp
Class/Paladin/Procs/SealOfCommandProc.h
Class/Paladin/Spells/Consecration.cpp
Class/Paladin/Spells/Consecration.h
Class/Paladin/Spells/Judgement.cpp
Class/Paladin/Spells/Judgement.h
Class/Paladin/Spells/MainhandAttackPaladin.cpp
Class/Paladin/Spells/MainhandAttackPaladin.h
Class/Paladin/Spells/PaladinSeal.cpp
Class/Paladin/Spells/PaladinSeal.h
Class/Paladin/Spells/SanctityAura.cpp
Class/Paladin/Spells/SanctityAura.h
Class/Paladin/Spells/SealOfCommand.cpp
Class/Paladin/Spells/SealOfCommand.h
Class/Paladin/Spells/SealOfTheCrusader.cpp
Class/Paladin/Spells/SealOfTheCrusader.h
Class/Paladin/TalentTrees/HolyPaladin.cpp
Class/Paladin/TalentTrees/HolyPaladin.h
Class/Paladin/TalentTrees/ProtectionPaladin.cpp
Class/Paladin/TalentTrees/ProtectionPaladin.h
Class/Paladin/TalentTrees/Retribution.cpp
Class/Paladin/TalentTrees/Retribution.h
Class/Priest/Priest.cpp
Class/Priest/Priest.h
Class/Priest/PriestSpells.cpp
Class/Priest/PriestSpells.h
Class/Rogue/Buffs/AdrenalineRushBuff.cpp
Class/Rogue/Buffs/AdrenalineRushBuff.h
Class/Rogue/Buffs/BladeFlurryBuff.cpp
Class/Rogue/Buffs/BladeFlurryBuff.h
Class/Rogue/Buffs/InstantPoisonBuff.cpp
Class/Rogue/Buffs/InstantPoisonBuff.h
Class/Rogue/Buffs/SliceAndDiceBuff.cpp
Class/Rogue/Buffs/SliceAndDiceBuff.h
Class/Rogue/Procs/InstantPoison.cpp
Class/Rogue/Procs/InstantPoison.h
Class/Rogue/Procs/RelentlessStrikes.cpp
Class/Rogue/Procs/RelentlessStrikes.h
Class/Rogue/Procs/Ruthlessness.cpp
Class/Rogue/Procs/Ruthlessness.h
Class/Rogue/Procs/SealFate.cpp
Class/Rogue/Procs/SealFate.h
Class/Rogue/Rogue.cpp
Class/Rogue/Rogue.h
Class/Rogue/RogueEnchants.cpp
Class/Rogue/RogueEnchants.h
Class/Rogue/RogueSpells.cpp
Class/Rogue/RogueSpells.h
Class/Rogue/Spells/AdrenalineRush.cpp
Class/Rogue/Spells/AdrenalineRush.h
Class/Rogue/Spells/Backstab.cpp
Class/Rogue/Spells/Backstab.h
Class/Rogue/Spells/BladeFlurry.cpp
Class/Rogue/Spells/BladeFlurry.h
Class/Rogue/Spells/Eviscerate.cpp
Class/Rogue/Spells/Eviscerate.h
Class/Rogue/Spells/Hemorrhage.cpp
Class/Rogue/Spells/Hemorrhage.h
Class/Rogue/Spells/OffhandAttackRogue.cpp
Class/Rogue/Spells/OffhandAttackRogue.h
Class/Rogue/Spells/SinisterStrike.cpp
Class/Rogue/Spells/SinisterStrike.h
Class/Rogue/Spells/SliceAndDice.cpp
Class/Rogue/Spells/SliceAndDice.h
Class/Rogue/Spells/ThistleTea.cpp
Class/Rogue/Spells/ThistleTea.h
Class/Rogue/TalentTrees/Assassination.cpp
Class/Rogue/TalentTrees/Assassination.h
Class/Rogue/TalentTrees/Assassination/Malice.cpp
Class/Rogue/TalentTrees/Assassination/Malice.h
Class/Rogue/TalentTrees/Assassination/Murder.cpp
Class/Rogue/TalentTrees/Assassination/Murder.h
Class/Rogue/TalentTrees/Assassination/Vigor.cpp
Class/Rogue/TalentTrees/Assassination/Vigor.h
Class/Rogue/TalentTrees/Combat.cpp
Class/Rogue/TalentTrees/Combat.h
Class/Rogue/TalentTrees/Combat/DaggerSpecialization.cpp
Class/Rogue/TalentTrees/Combat/DaggerSpecialization.h
Class/Rogue/TalentTrees/Combat/FistWeaponSpecialization.cpp
Class/Rogue/TalentTrees/Combat/FistWeaponSpecialization.h
Class/Rogue/TalentTrees/Combat/MaceSpecialization.cpp
Class/Rogue/TalentTrees/Combat/MaceSpecialization.h
Class/Rogue/TalentTrees/Combat/Precision.cpp
Class/Rogue/TalentTrees/Combat/Precision.h
Class/Rogue/TalentTrees/Combat/WeaponExpertise.cpp
Class/Rogue/TalentTrees/Combat/WeaponExpertise.h
Class/Rogue/TalentTrees/Subtlety.cpp
Class/Rogue/TalentTrees/Subtlety.h
Class/Rogue/TalentTrees/Subtlety/Deadliness.cpp
Class/Rogue/TalentTrees/Subtlety/Deadliness.h
Class/Rogue/TalentTrees/Subtlety/SerratedBlades.cpp
Class/Rogue/TalentTrees/Subtlety/SerratedBlades.h
Class/Shaman/Buffs/ElementalDevastation.cpp
Class/Shaman/Buffs/ElementalDevastation.h
Class/Shaman/Buffs/StormstrikeBuff.cpp
Class/Shaman/Buffs/StormstrikeBuff.h
Class/Shaman/Procs/ClearcastingShaman.cpp
Class/Shaman/Procs/ClearcastingShaman.h
Class/Shaman/Procs/WindfuryWeaponProc.cpp
Class/Shaman/Procs/WindfuryWeaponProc.h
Class/Shaman/Shaman.cpp
Class/Shaman/Shaman.h
Class/Shaman/ShamanEnchants.cpp
Class/Shaman/ShamanEnchants.h
Class/Shaman/ShamanSpells.cpp
Class/Shaman/ShamanSpells.h
Class/Shaman/Spells/LightningBolt.cpp
Class/Shaman/Spells/LightningBolt.h
Class/Shaman/Spells/Stormstrike.cpp
Class/Shaman/Spells/Stormstrike.h
Class/Shaman/Spells/WindfuryWeapon.cpp
Class/Shaman/Spells/WindfuryWeapon.h
Class/Shaman/TalentTrees/Elemental.cpp
Class/Shaman/TalentTrees/Elemental.h
Class/Shaman/TalentTrees/Enhancement.cpp
Class/Shaman/TalentTrees/Enhancement.h
Class/Shaman/TalentTrees/RestorationShaman.cpp
Class/Shaman/TalentTrees/RestorationShaman.h
Class/Warlock/Buffs/ImprovedShadowBolt.cpp
Class/Warlock/Buffs/ImprovedShadowBolt.h
Class/Warlock/Spells/LifeTap.cpp
Class/Warlock/Spells/LifeTap.h
Class/Warlock/Spells/ShadowBolt.cpp
Class/Warlock/Spells/ShadowBolt.h
Class/Warlock/TalentTrees/Affliction.cpp
Class/Warlock/TalentTrees/Affliction.h
Class/Warlock/TalentTrees/Demonology.cpp
Class/Warlock/TalentTrees/Demonology.h
Class/Warlock/TalentTrees/Destruction.cpp
Class/Warlock/TalentTrees/Destruction.h
Class/Warlock/Warlock.cpp
Class/Warlock/Warlock.h
Class/Warlock/WarlockEnchants.cpp
Class/Warlock/WarlockEnchants.h
Class/Warlock/WarlockSpells.cpp
Class/Warlock/WarlockSpells.h
Class/Warrior/Buffs/BattleShoutBuff.cpp
Class/Warrior/Buffs/BattleShoutBuff.h
Class/Warrior/Buffs/BattleStanceBuff.cpp
Class/Warrior/Buffs/BattleStanceBuff.h
Class/Warrior/Buffs/BerserkerStanceBuff.cpp
Class/Warrior/Buffs/BerserkerStanceBuff.h
Class/Warrior/Buffs/DeathWishBuff.cpp
Class/Warrior/Buffs/DeathWishBuff.h
Class/Warrior/Buffs/DefensiveStanceBuff.cpp
Class/Warrior/Buffs/DefensiveStanceBuff.h
Class/Warrior/Buffs/Flurry.cpp
Class/Warrior/Buffs/Flurry.h
Class/Warrior/Buffs/RecklessnessBuff.cpp
Class/Warrior/Buffs/RecklessnessBuff.h
Class/Warrior/Procs/SwordSpecialization.cpp
Class/Warrior/Procs/SwordSpecialization.h
Class/Warrior/Procs/UnbridledWrath.cpp
Class/Warrior/Procs/UnbridledWrath.h
Class/Warrior/Spells/AngerManagement.cpp
Class/Warrior/Spells/AngerManagement.h
Class/Warrior/Spells/BattleShout.cpp
Class/Warrior/Spells/BattleShout.h
Class/Warrior/Spells/BattleStance.cpp
Class/Warrior/Spells/BattleStance.h
Class/Warrior/Spells/BerserkerRage.cpp
Class/Warrior/Spells/BerserkerRage.h
Class/Warrior/Spells/BerserkerStance.cpp
Class/Warrior/Spells/BerserkerStance.h
Class/Warrior/Spells/Bloodrage.cpp
Class/Warrior/Spells/Bloodrage.h
Class/Warrior/Spells/Bloodthirst.cpp
Class/Warrior/Spells/Bloodthirst.h
Class/Warrior/Spells/DeathWish.cpp
Class/Warrior/Spells/DeathWish.h
Class/Warrior/Spells/DeepWounds.cpp
Class/Warrior/Spells/DeepWounds.h
Class/Warrior/Spells/DefensiveStance.cpp
Class/Warrior/Spells/DefensiveStance.h
Class/Warrior/Spells/Execute.cpp
Class/Warrior/Spells/Execute.h
Class/Warrior/Spells/Hamstring.cpp
Class/Warrior/Spells/Hamstring.h
Class/Warrior/Spells/HeroicStrike.cpp
Class/Warrior/Spells/HeroicStrike.h
Class/Warrior/Spells/MainhandAttackWarrior.cpp
Class/Warrior/Spells/MainhandAttackWarrior.h
Class/Warrior/Spells/MortalStrike.cpp
Class/Warrior/Spells/MortalStrike.h
Class/Warrior/Spells/OffhandAttackWarrior.cpp
Class/Warrior/Spells/OffhandAttackWarrior.h
Class/Warrior/Spells/Overpower.cpp
Class/Warrior/Spells/Overpower.h
Class/Warrior/Spells/Recklessness.cpp
Class/Warrior/Spells/Recklessness.h
Class/Warrior/Spells/Rend.cpp
Class/Warrior/Spells/Rend.h
Class/Warrior/Spells/Revenge.cpp
Class/Warrior/Spells/Revenge.h
Class/Warrior/Spells/ShieldSlam.cpp
Class/Warrior/Spells/ShieldSlam.h
Class/Warrior/Spells/Slam.cpp
Class/Warrior/Spells/Slam.h
Class/Warrior/Spells/SunderArmor.cpp
Class/Warrior/Spells/SunderArmor.h
Class/Warrior/Spells/Whirlwind.cpp
Class/Warrior/Spells/Whirlwind.h
Class/Warrior/TalentTrees/Arms.cpp
Class/Warrior/TalentTrees/Arms.h
Class/Warrior/TalentTrees/Arms/AxeSpecialization.cpp
Class/Warrior/TalentTrees/Arms/AxeSpecialization.h
Class/Warrior/TalentTrees/Arms/Impale.cpp
Class/Warrior/TalentTrees/Arms/Impale.h
Class/Warrior/TalentTrees/Arms/PolearmSpecialization.cpp
Class/Warrior/TalentTrees/Arms/PolearmSpecialization.h
Class/Warrior/TalentTrees/Arms/TacticalMastery.cpp
Class/Warrior/TalentTrees/Arms/TacticalMastery.h
Class/Warrior/TalentTrees/Arms/TwoHandedWeaponSpecialization.cpp
Class/Warrior/TalentTrees/Arms/TwoHandedWeaponSpecialization.h
Class/Warrior/TalentTrees/Fury.cpp
Class/Warrior/TalentTrees/Fury.h
Class/Warrior/TalentTrees/Protection.cpp
Class/Warrior/TalentTrees/Protection.h
Class/Warrior/Warrior.cpp
Class/Warrior/Warrior.h
Class/Warrior/WarriorEnchants.cpp
Class/Warrior/WarriorEnchants.h
Class/Warrior/WarriorSpells.cpp
Class/Warrior/WarriorSpells.h
CombatRoll/AttackTables/MagicAttackTable.cpp
CombatRoll/AttackTables/MagicAttackTable.h
CombatRoll/AttackTables/MeleeSpecialTable.cpp
CombatRoll/AttackTables/MeleeSpecialTable.h
CombatRoll/AttackTables/MeleeWhiteHitTable.cpp
CombatRoll/AttackTables/MeleeWhiteHitTable.h
CombatRoll/AttackTables/RangedWhiteHitTable.cpp
CombatRoll/AttackTables/RangedWhiteHitTable.h
CombatRoll/CombatRoll.cpp
CombatRoll/CombatRoll.h
CombatRoll/MagicAttackResult.h
CombatRoll/PhysicalAttackResult.h
CombatRoll/Random.cpp
CombatRoll/Random.h
CombatRoll/xorshift/xoroshiro128plus.cpp
CombatRoll/xorshift/xoroshiro128plus.h
Engine/Engine.cpp
Engine/Engine.h
Equipment/Equipment.cpp
Equipment/Equipment.h
Equipment/EquipmentDb/EquipmentDb.cpp
Equipment/EquipmentDb/EquipmentDb.h
Equipment/EquipmentDb/ItemFileReader.cpp
Equipment/EquipmentDb/ItemFileReader.h
Equipment/EquipmentDb/ProjectileFileReader.cpp
Equipment/EquipmentDb/ProjectileFileReader.h
Equipment/EquipmentDb/SetBonusFileReader.cpp
Equipment/EquipmentDb/SetBonusFileReader.h
Equipment/EquipmentDb/WeaponFileReader.cpp
Equipment/EquipmentDb/WeaponFileReader.h
Equipment/Item/Item.cpp
Equipment/Item/Item.h
Equipment/Item/ItemNamespace.h
Equipment/Item/ItemStatsEnum.cpp
Equipment/Item/ItemStatsEnum.h
Equipment/Item/Projectile.cpp
Equipment/Item/Projectile.h
Equipment/Item/Quiver.cpp
Equipment/Item/Quiver.h
Equipment/Item/RandomAffix.cpp
Equipment/Item/RandomAffix.h
Equipment/Item/Weapon.cpp
Equipment/Item/Weapon.h
Equipment/RandomAffixes.cpp
Equipment/RandomAffixes.h
Equipment/SetBonusControl.cpp
Equipment/SetBonusControl.h
Event/Event.cpp
Event/Event.h
Event/Events/BuffRemoval.cpp
Event/Events/BuffRemoval.h
Event/Events/CastComplete.cpp
Event/Events/CastComplete.h
Event/Events/DotTick.cpp
Event/Events/DotTick.h
Event/Events/EncounterEnd.cpp
Event/Events/EncounterEnd.h
Event/Events/EncounterStart.cpp
Event/Events/EncounterStart.h
Event/Events/IncomingDamageEvent.cpp
Event/Events/IncomingDamageEvent.h
Event/Events/MainhandMeleeHit.cpp
Event/Events/MainhandMeleeHit.h
Event/Events/OffhandMeleeHit.cpp
Event/Events/OffhandMeleeHit.h
Event/Events/PeriodicRefreshBuff.cpp
Event/Events/PeriodicRefreshBuff.h
Event/Events/PetAction.cpp
Event/Events/PetAction.h
Event/Events/PetMeleeHit.cpp
Event/Events/PetMeleeHit.h
Event/Events/PlayerAction.cpp
Event/Events/PlayerAction.h
Event/Events/RangedHit.cpp
Event/Events/RangedHit.h
Event/Events/SpellCallback.cpp
Event/Events/SpellCallback.h
Faction/AvailableFactions.h
Faction/Faction.cpp
Faction/Faction.h
GUI/ClassicSimControl.cpp
GUI/ClassicSimControl.h
GUI/Items.h
GUI/Models/ActiveItemStatFilterModel.cpp
GUI/Models/ActiveItemStatFilterModel.h
GUI/Models/AvailableItemStatFilterModel.cpp
GUI/Models/AvailableItemStatFilterModel.h
GUI/Models/BuffModel.cpp
GUI/Models/BuffModel.h
GUI/Models/DamageMetersModel.cpp
GUI/Models/DamageMetersModel.h
GUI/Models/DebuffModel.cpp
GUI/Models/DebuffModel.h
GUI/Models/EnchantModel.cpp
GUI/Models/EnchantModel.h
GUI/Models/ItemModel.cpp
GUI/Models/ItemModel.h
GUI/Models/ItemTypeFilterModel.cpp
GUI/Models/ItemTypeFilterModel.h
GUI/Models/RandomAffixModel.cpp
GUI/Models/RandomAffixModel.h
GUI/Models/RotationConditionsModel.cpp
GUI/Models/RotationConditionsModel.h
GUI/Models/RotationModel.cpp
GUI/Models/RotationModel.h
GUI/Models/SimScaleModel.cpp
GUI/Models/SimScaleModel.h
GUI/Models/SortDirection.h
GUI/Models/Statistics/BuffBreakdownModel.cpp
GUI/Models/Statistics/BuffBreakdownModel.h
GUI/Models/Statistics/DebuffBreakdownModel.cpp
GUI/Models/Statistics/DebuffBreakdownModel.h
GUI/Models/Statistics/EngineBreakdownModel.cpp
GUI/Models/Statistics/EngineBreakdownModel.h
GUI/Models/Statistics/MeleeDamageAvoidanceBreakdownModel.cpp
GUI/Models/Statistics/MeleeDamageAvoidanceBreakdownModel.h
GUI/Models/Statistics/MeleeDamageBreakdownModel.cpp
GUI/Models/Statistics/MeleeDamageBreakdownModel.h
GUI/Models/Statistics/ProcBreakdownModel.cpp
GUI/Models/Statistics/ProcBreakdownModel.h
GUI/Models/Statistics/ResourceBreakdownModel.cpp
GUI/Models/Statistics/ResourceBreakdownModel.h
GUI/Models/Statistics/RotationExecutorBreakdownModel.cpp
GUI/Models/Statistics/RotationExecutorBreakdownModel.h
GUI/Models/Statistics/RotationExecutorListModel.cpp
GUI/Models/Statistics/RotationExecutorListModel.h
GUI/Models/Statistics/ScaleResultModel.cpp
GUI/Models/Statistics/ScaleResultModel.h
GUI/Models/Statistics/ThreatBreakdownModel.cpp
GUI/Models/Statistics/ThreatBreakdownModel.h
GUI/Models/WeaponModel.cpp
GUI/Models/WeaponModel.h
GUI/SimControl.cpp
GUI/SimControl.h
GUI/SimOption.h
GUI/SimSettings.cpp
GUI/SimSettings.h
GUI/TemplateCharacters.cpp
GUI/TemplateCharacters.h
Mechanics/Mechanics.cpp
Mechanics/Mechanics.h
Phases/ContentPhase.cpp
Phases/ContentPhase.h
Phases/PhaseRequirer.cpp
Phases/PhaseRequirer.h
Queue/Queue.cpp
Queue/Queue.h
Raid/RaidControl.cpp
Raid/RaidControl.h
Resource/Energy.cpp
Resource/Energy.h
Resource/Focus.cpp
Resource/Focus.h
Resource/Mana.cpp
Resource/Mana.h
Resource/Rage.cpp
Resource/Rage.h
Resource/RegeneratingResource.cpp
Resource/RegeneratingResource.h
Resource/Resource.h
Rotation/Condition.cpp
Rotation/Condition.h
Rotation/Conditions/ConditionBuffDuration.cpp
Rotation/Conditions/ConditionBuffDuration.h
Rotation/Conditions/ConditionBuffStacks.cpp
Rotation/Conditions/ConditionBuffStacks.h
Rotation/Conditions/ConditionResource.cpp
Rotation/Conditions/ConditionResource.h
Rotation/Conditions/ConditionSpell.cpp
Rotation/Conditions/ConditionSpell.h
Rotation/Conditions/ConditionVariableBuiltin.cpp
Rotation/Conditions/ConditionVariableBuiltin.h
Rotation/Rotation.cpp
Rotation/Rotation.h
Rotation/RotationExecutor.cpp
Rotation/RotationExecutor.h
Rotation/RotationFileReader.cpp
Rotation/RotationFileReader.h
Rulesets/RulesetControl.cpp
Rulesets/RulesetControl.h
Rulesets/Rulesets.h
Spells/Buff.cpp
Spells/Buff.h
Spells/CastingTimeRequirer.cpp
Spells/CastingTimeRequirer.h
Spells/CooldownControl.cpp
Spells/CooldownControl.h
Spells/ExternalBuff.cpp
Spells/ExternalBuff.h
Spells/ItemModificationRequirer.cpp
Spells/ItemModificationRequirer.h
Spells/MagicSchools.h
Spells/PartyBuff.cpp
Spells/PartyBuff.h
Spells/Proc.cpp
Spells/Proc.h
Spells/ProcInfo.h
Spells/ProcPPM.cpp
Spells/ProcPPM.h
Spells/SelfBuff.cpp
Spells/SelfBuff.h
Spells/SetBonusRequirer.cpp
Spells/SetBonusRequirer.h
Spells/SharedBuff.cpp
Spells/SharedBuff.h
Spells/SharedDebuff.cpp
Spells/SharedDebuff.h
Spells/Spell.cpp
Spells/Spell.h
Spells/SpellPeriodic.cpp
Spells/SpellPeriodic.h
Spells/SpellRankGroup.cpp
Spells/SpellRankGroup.h
Spells/UniqueDebuff.cpp
Spells/UniqueDebuff.h
Statistics/ClassStatistics.cpp
Statistics/ClassStatistics.h
Statistics/NumberCruncher.cpp
Statistics/NumberCruncher.h
Statistics/RaidMemberResult.h
Statistics/StatisticsBuff.cpp
Statistics/StatisticsBuff.h
Statistics/StatisticsEngine.cpp
Statistics/StatisticsEngine.h
Statistics/StatisticsProc.cpp
Statistics/StatisticsProc.h
Statistics/StatisticsResource.cpp
Statistics/StatisticsResource.h
Statistics/StatisticsRotationExecutor.cpp
Statistics/StatisticsRotationExecutor.h
Statistics/StatisticsSpell.cpp
Statistics/StatisticsSpell.h
Talent/CharacterTalents.cpp
Talent/CharacterTalents.h
Talent/Talent.cpp
Talent/Talent.h
Talent/TalentRequirer.cpp
Talent/TalentRequirer.h
Talent/TalentStatIncrease.cpp
Talent/TalentStatIncrease.h
Talent/TalentTree.cpp
Talent/TalentTree.h
Target/Target.cpp
Target/Target.h
Test/AttackTables/TestAttackTables.cpp
Test/AttackTables/TestAttackTables.h
Test/Druid/Spells/TestBearForm.cpp
Test/Druid/Spells/TestBearForm.h
Test/Druid/Spells/TestCatForm.cpp
Test/Druid/Spells/TestCatForm.h
Test/Druid/Spells/TestEnrage.cpp
Test/Druid/Spells/TestEnrage.h
Test/Druid/Spells/TestFerociousBite.cpp
Test/Druid/Spells/TestFerociousBite.h
Test/Druid/Spells/TestMaul.cpp
Test/Druid/Spells/TestMaul.h
Test/Druid/Spells/TestMoonfire.cpp
Test/Druid/Spells/TestMoonfire.h
Test/Druid/Spells/TestMoonkinForm.cpp
Test/Druid/Spells/TestMoonkinForm.h
Test/Druid/Spells/TestShred.cpp
Test/Druid/Spells/TestShred.h
Test/Druid/Spells/TestStarfire.cpp
Test/Druid/Spells/TestStarfire.h
Test/Druid/Spells/TestSwipe.cpp
Test/Druid/Spells/TestSwipe.h
Test/Druid/Spells/TestWrath.cpp
Test/Druid/Spells/TestWrath.h
Test/Druid/Talents/TestBalance.cpp
Test/Druid/Talents/TestBalance.h
Test/Druid/Talents/TestFeralCombat.cpp
Test/Druid/Talents/TestFeralCombat.h
Test/Druid/Talents/TestRestorationDruid.cpp
Test/Druid/Talents/TestRestorationDruid.h
Test/Druid/TestDruid.cpp
Test/Druid/TestDruid.h
Test/Druid/TestSpellDruid.cpp
Test/Druid/TestSpellDruid.h
Test/General/Procs/TestFelstrikerProc.cpp
Test/General/Procs/TestFelstrikerProc.h
Test/General/Spells/TestEssenceOfTheRed.cpp
Test/General/Spells/TestEssenceOfTheRed.h
Test/Hunter/Spells/TestAimedShot.cpp
Test/Hunter/Spells/TestAimedShot.h
Test/Hunter/Spells/TestAutoShot.cpp
Test/Hunter/Spells/TestAutoShot.h
Test/Hunter/Spells/TestMultiShot.cpp
Test/Hunter/Spells/TestMultiShot.h
Test/Hunter/Talents/TestBeastMastery.cpp
Test/Hunter/Talents/TestBeastMastery.h
Test/Hunter/Talents/TestHunterTalentStatIncrease.cpp
Test/Hunter/Talents/TestHunterTalentStatIncrease.h
Test/Hunter/Talents/TestMarksmanship.cpp
Test/Hunter/Talents/TestMarksmanship.h
Test/Hunter/Talents/TestSurvival.cpp
Test/Hunter/Talents/TestSurvival.h
Test/Hunter/TestHunter.cpp
Test/Hunter/TestHunter.h
Test/Hunter/TestSpellHunter.cpp
Test/Hunter/TestSpellHunter.h
Test/Mage/Spells/TestArcaneMissiles.cpp
Test/Mage/Spells/TestArcaneMissiles.h
Test/Mage/Spells/TestEvocation.cpp
Test/Mage/Spells/TestEvocation.h
Test/Mage/Spells/TestFireball.cpp
Test/Mage/Spells/TestFireball.h
Test/Mage/Spells/TestFrostbolt.cpp
Test/Mage/Spells/TestFrostbolt.h
Test/Mage/Spells/TestMageArmor.cpp
Test/Mage/Spells/TestMageArmor.h
Test/Mage/Spells/TestScorch.cpp
Test/Mage/Spells/TestScorch.h
Test/Mage/Talents/TestArcane.cpp
Test/Mage/Talents/TestArcane.h
Test/Mage/Talents/TestFire.cpp
Test/Mage/Talents/TestFire.h
Test/Mage/Talents/TestFrost.cpp
Test/Mage/Talents/TestFrost.h
Test/Mage/Talents/TestMageTalentStatIncrease.cpp
Test/Mage/Talents/TestMageTalentStatIncrease.h
Test/Mage/TestMage.cpp
Test/Mage/TestMage.h
Test/Mage/TestSpellMage.cpp
Test/Mage/TestSpellMage.h
Test/Paladin/Spells/TestConsecration.cpp
Test/Paladin/Spells/TestConsecration.h
Test/Paladin/Spells/TestJudgement.cpp
Test/Paladin/Spells/TestJudgement.h
Test/Paladin/Spells/TestMainhandAttackPaladin.cpp
Test/Paladin/Spells/TestMainhandAttackPaladin.h
Test/Paladin/Spells/TestSealOfCommand.cpp
Test/Paladin/Spells/TestSealOfCommand.h
Test/Paladin/Spells/TestSealOfTheCrusader.cpp
Test/Paladin/Spells/TestSealOfTheCrusader.h
Test/Paladin/Talents/TestHolyPaladin.cpp
Test/Paladin/Talents/TestHolyPaladin.h
Test/Paladin/Talents/TestPaladinTalentStatIncrease.cpp
Test/Paladin/Talents/TestPaladinTalentStatIncrease.h
Test/Paladin/Talents/TestProtectionPaladin.cpp
Test/Paladin/Talents/TestProtectionPaladin.h
Test/Paladin/Talents/TestRetribution.cpp
Test/Paladin/Talents/TestRetribution.h
Test/Paladin/TestPaladin.cpp
Test/Paladin/TestPaladin.h
Test/Paladin/TestSpellPaladin.cpp
Test/Paladin/TestSpellPaladin.h
Test/Rogue/Procs/TestRelentlessStrikes.cpp
Test/Rogue/Procs/TestRelentlessStrikes.h
Test/Rogue/Procs/TestSealFate.cpp
Test/Rogue/Procs/TestSealFate.h
Test/Rogue/Spells/TestAdrenalineRush.cpp
Test/Rogue/Spells/TestAdrenalineRush.h
Test/Rogue/Spells/TestBackstab.cpp
Test/Rogue/Spells/TestBackstab.h
Test/Rogue/Spells/TestBladeFlurry.cpp
Test/Rogue/Spells/TestBladeFlurry.h
Test/Rogue/Spells/TestEviscerate.cpp
Test/Rogue/Spells/TestEviscerate.h
Test/Rogue/Spells/TestHemorrhage.cpp
Test/Rogue/Spells/TestHemorrhage.h
Test/Rogue/Spells/TestSinisterStrike.cpp
Test/Rogue/Spells/TestSinisterStrike.h
Test/Rogue/Spells/TestSliceAndDice.cpp
Test/Rogue/Spells/TestSliceAndDice.h
Test/Rogue/Talents/TestAssassination.cpp
Test/Rogue/Talents/TestAssassination.h
Test/Rogue/Talents/TestCombat.cpp
Test/Rogue/Talents/TestCombat.h
Test/Rogue/Talents/TestSubtlety.cpp
Test/Rogue/Talents/TestSubtlety.h
Test/Rogue/TestEnergy.cpp
Test/Rogue/TestEnergy.h
Test/Rogue/TestProcRogue.cpp
Test/Rogue/TestProcRogue.h
Test/Rogue/TestRogue.cpp
Test/Rogue/TestRogue.h
Test/Rogue/TestSpellRogue.cpp
Test/Rogue/TestSpellRogue.h
Test/Rotation/TestConditionResource.cpp
Test/Rotation/TestConditionResource.h
Test/Rotation/TestConditionVariableBuiltin.cpp
Test/Rotation/TestConditionVariableBuiltin.h
Test/Rotation/TestRotationFileReader.cpp
Test/Rotation/TestRotationFileReader.h
Test/Shaman/Spells/TestLightningBolt.cpp
Test/Shaman/Spells/TestLightningBolt.h
Test/Shaman/Spells/TestStormstrike.cpp
Test/Shaman/Spells/TestStormstrike.h
Test/Shaman/Talents/TestElemental.cpp
Test/Shaman/Talents/TestElemental.h
Test/Shaman/Talents/TestEnhancement.cpp
Test/Shaman/Talents/TestEnhancement.h
Test/Shaman/Talents/TestRestorationShaman.cpp
Test/Shaman/Talents/TestRestorationShaman.h
Test/Shaman/TestShaman.cpp
Test/Shaman/TestShaman.h
Test/Shaman/TestSpellShaman.cpp
Test/Shaman/TestSpellShaman.h
Test/Target/TestTarget.cpp
Test/Target/TestTarget.h
Test/Test.cpp
Test/Test.h
Test/TestBloodFury.cpp
Test/TestBloodFury.h
Test/TestBuff.cpp
Test/TestBuff.h
Test/TestCharacterStats.cpp
Test/TestCharacterStats.h
Test/TestCombatRoll.cpp
Test/TestCombatRoll.h
Test/TestMana.cpp
Test/TestMana.h
Test/TestMechanics.cpp
Test/TestMechanics.h
Test/TestObject.cpp
Test/TestObject.h
Test/TestProc.cpp
Test/TestProc.h
Test/TestSpell.cpp
Test/TestSpell.h
Test/TestSpellDamage.cpp
Test/TestSpellDamage.h
Test/TestStats.cpp
Test/TestStats.h
Test/TestTalentTree.cpp
Test/TestTalentTree.h
Test/TestUtils.h
Test/Warlock/Spells/TestLifeTap.cpp
Test/Warlock/Spells/TestLifeTap.h
Test/Warlock/Spells/TestShadowBolt.cpp
Test/Warlock/Spells/TestShadowBolt.h
Test/Warlock/Talents/TestAffliction.cpp
Test/Warlock/Talents/TestAffliction.h
Test/Warlock/Talents/TestDemonology.cpp
Test/Warlock/Talents/TestDemonology.h
Test/Warlock/Talents/TestDestruction.cpp
Test/Warlock/Talents/TestDestruction.h
Test/Warlock/TestSpellWarlock.cpp
Test/Warlock/TestSpellWarlock.h
Test/Warlock/TestWarlock.cpp
Test/Warlock/TestWarlock.h
Test/Warrior/Buffs/TestFlurryWarrior.cpp
Test/Warrior/Buffs/TestFlurryWarrior.h
Test/Warrior/Procs/TestSwordSpecialization.cpp
Test/Warrior/Procs/TestSwordSpecialization.h
Test/Warrior/Procs/TestUnbridledWrath.cpp
Test/Warrior/Procs/TestUnbridledWrath.h
Test/Warrior/Spells/TestBattleShout.cpp
Test/Warrior/Spells/TestBattleShout.h
Test/Warrior/Spells/TestBerserkerStance.cpp
Test/Warrior/Spells/TestBerserkerStance.h
Test/Warrior/Spells/TestBloodrage.cpp
Test/Warrior/Spells/TestBloodrage.h
Test/Warrior/Spells/TestBloodthirst.cpp
Test/Warrior/Spells/TestBloodthirst.h
Test/Warrior/Spells/TestDeathWish.cpp
Test/Warrior/Spells/TestDeathWish.h
Test/Warrior/Spells/TestDeepWounds.cpp
Test/Warrior/Spells/TestDeepWounds.h
Test/Warrior/Spells/TestExecute.cpp
Test/Warrior/Spells/TestExecute.h
Test/Warrior/Spells/TestHeroicStrike.cpp
Test/Warrior/Spells/TestHeroicStrike.h
Test/Warrior/Spells/TestMainhandAttackWarrior.cpp
Test/Warrior/Spells/TestMainhandAttackWarrior.h
Test/Warrior/Spells/TestMortalStrike.cpp
Test/Warrior/Spells/TestMortalStrike.h
Test/Warrior/Spells/TestOffhandAttackWarrior.cpp
Test/Warrior/Spells/TestOffhandAttackWarrior.h
Test/Warrior/Spells/TestOverpower.cpp
Test/Warrior/Spells/TestOverpower.h
Test/Warrior/Spells/TestRecklessness.cpp
Test/Warrior/Spells/TestRecklessness.h
Test/Warrior/Spells/TestRend.cpp
Test/Warrior/Spells/TestRend.h
Test/Warrior/Spells/TestRevenge.cpp
Test/Warrior/Spells/TestRevenge.h
Test/Warrior/Spells/TestSlam.cpp
Test/Warrior/Spells/TestSlam.h
Test/Warrior/Spells/TestWhirlwind.cpp
Test/Warrior/Spells/TestWhirlwind.h
Test/Warrior/Talents/TestArms.cpp
Test/Warrior/Talents/TestArms.h
Test/Warrior/Talents/TestDefiance.cpp
Test/Warrior/Talents/TestDefiance.h
Test/Warrior/Talents/TestFury.cpp
Test/Warrior/Talents/TestFury.h
Test/Warrior/Talents/TestTwoHandedWeaponSpecialization.cpp
Test/Warrior/Talents/TestTwoHandedWeaponSpecialization.h
Test/Warrior/TestBuffWarrior.cpp
Test/Warrior/TestBuffWarrior.h
Test/Warrior/TestProcWarrior.cpp
Test/Warrior/TestProcWarrior.h
Test/Warrior/TestSpellWarrior.cpp
Test/Warrior/TestSpellWarrior.h
Test/Warrior/TestWarrior.cpp
Test/Warrior/TestWarrior.h
Thread/SimulationRunner.cpp
Thread/SimulationRunner.h
Thread/SimulationThreadPool.cpp
Thread/SimulationThreadPool.h
Utils/Check.h
Utils/CompareDouble.cpp
Utils/CompareDouble.h
)
target_compile_definitions(
  ClassicLib
  PRIVATE $<$<OR:$<CONFIG:Debug>,$<CONFIG:RelWithDebInfo>>:QT_QML_DEBUG>
)
target_link_libraries(ClassicLib PRIVATE Qt5::Core Qt5::Quick Qt5::Charts)



add_executable(
  ClassicSim
  qml.qrc
  main.cpp
  GUI/GUIControl.cpp
  GUI/GUIControl.h
)
target_compile_definitions(
  ClassicSim
  PRIVATE $<$<OR:$<CONFIG:Debug>,$<CONFIG:RelWithDebInfo>>:QT_QML_DEBUG>
)
target_link_libraries(ClassicSim PRIVATE ClassicLib Qt5::Core Qt5::Quick Qt5::Charts)


add_executable(
  cs
  CommandLineControl.cpp
  main2.cpp
)
target_compile_definitions(
  cs
  PRIVATE $<$<OR:$<CONFIG:Debug>,$<CONFIG:RelWithDebInfo>>:QT_QML_DEBUG>
)
target_link_libraries(cs PRIVATE ClassicLib Qt5::Core Qt5::Quick Qt5::Charts)
